tests/NormalTests/paczka1/fuzzy1/61299120.err
Error in line 10: S144 A2f5 41,2
Error in line 19: miw0o9D S373 76,0
Error in line 38: 5NtOjkgn A295 70,8
